Fix command padding on mobile

--- a/Alyx.Discord.Api/Components/ChatInput.razor.css
+++ b/Alyx.Discord.Api/Components/ChatInput.razor.css
@@ -3,11 +3,12 @@ button {
     box-sizing: border-box !important; /* i got no idea why this is necessary */
     position: relative;
     display: flex;
+    gap: 0.33em;
     align-items: center;
 
     width: 100%;
     height: 100%;
-    padding: 8px 16px;
+    padding: 8px calc(16px + 2.25em) 8px 16px;
 
     background: rgb(57, 59, 63);
     border-radius: 4px;
@@ -28,7 +29,6 @@ button {
 
     > span:not(:last-of-type) {
         display: inline-block;
-        margin: 0 0.3em;
         background: rgb(35 36 40);
         border: 1px solid rgb(30 31 34);
         border-radius: 5px;
